# catlock

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  catlock.cpp  catlock.desktop  catlock.spec  catlock.xml.in
.github/: release
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cmake/: FindXmlTo.cmake
debian/: README.Debian  changelog  control  copyright  files  rules
